tests/snapshots/examples_fixtures/type_system__typed_let_with_base.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/typed_let_with_base.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/type_system/typed_let_with_base.flx:8:5
  |
8 |     assert_eq(len(parts), 3)
  |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/type_system/typed_let_with_base.flx:11:5
   |
11 |     assert_eq(trimmed, "hi")
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/type_system/typed_let_with_base.flx:14:5
   |
14 |     assert_eq(upper_s, "HELLO")
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_true`.

  examples/type_system/typed_let_with_base.flx:17:5
   |
17 |     assert_true(has)
   |     ^^^^^^^^^^^

Hint:
  Define it first: let assert_true = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/type_system/typed_let_with_base.flx:20:5
   |
20 |     assert_eq(len(chars_arr), 3)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/type_system/typed_let_with_base.flx:23:5
   |
23 |     assert_eq(replaced, "hello flux")
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `range`.

  examples/type_system/typed_let_with_base.flx:26:28
   |
26 |     let nums: Array<Int> = range(1, 6)
   |                            ^^^^^

Hint:
  Define it first: let range = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/type_system/typed_let_with_base.flx:27:5
   |
27 |     assert_eq(len(nums), 5)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/type_system/typed_let_with_base.flx:29:31
   |
29 |     let doubled: Array<Int> = map(nums, /x -> x * 2)
   |                               ^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/type_system/typed_let_with_base.flx:30:5
   |
30 |     assert_eq(first(doubled), Some(2))
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `filter`.

  examples/type_system/typed_let_with_base.flx:32:29
   |
32 |     let evens: Array<Int> = filter(nums, /x -> x % 2 == 0)
   |                             ^^^^^^

Hint:
  Define it first: let filter = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/type_system/typed_let_with_base.flx:33:5
   |
33 |     assert_eq(len(evens), 2)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/type_system/typed_let_with_base.flx:35:22
   |
35 |     let total: Int = fold(nums, 0, /(acc, x) -> acc + x)
   |                      ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/type_system/typed_let_with_base.flx:36:5
   |
36 |     assert_eq(total, 15)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `any`.

  examples/type_system/typed_let_with_base.flx:38:23
   |
38 |     let found: Bool = any(nums, /x -> x == 3)
   |                       ^^^

Hint:
  Define it first: let any = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_true`.

  examples/type_system/typed_let_with_base.flx:39:5
   |
39 |     assert_true(found)
   |     ^^^^^^^^^^^

Hint:
  Define it first: let assert_true = ...;


error[E004]: Undefined Variable

I can't find a value named `all`.

  examples/type_system/typed_let_with_base.flx:41:25
   |
41 |     let all_pos: Bool = all(nums, /x -> x > 0)
   |                         ^^^

Hint:
  Define it first: let all = ...;

Help:
  Did you mean `all_pos`?


error[E004]: Undefined Variable

I can't find a value named `assert_true`.

  examples/type_system/typed_let_with_base.flx:42:5
   |
42 |     assert_true(all_pos)
   |     ^^^^^^^^^^^

Hint:
  Define it first: let assert_true = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/type_system/typed_let_with_base.flx:45:5
   |
45 |     assert_eq(first(rev), Some(5))
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `zip`.

  examples/type_system/typed_let_with_base.flx:47:37
   |
47 |     let zipped: Array<(Int, Int)> = zip(nums, doubled)
   |                                     ^^^

Hint:
  Define it first: let zip = ...;

Help:
  Did you mean `zipped`?


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/type_system/typed_let_with_base.flx:48:5
   |
48 |     assert_eq(len(zipped), 5)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `unwrap_or`.

  examples/type_system/typed_let_with_base.flx:51:20
   |
51 |     let val: Int = unwrap_or(Some(42), 0)
   |                    ^^^^^^^^^

Hint:
  Define it first: let unwrap_or = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/type_system/typed_let_with_base.flx:52:5
   |
52 |     assert_eq(val, 42)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `unwrap_or`.

  examples/type_system/typed_let_with_base.flx:54:25
   |
54 |     let none_val: Int = unwrap_or(None, 99)
   |                         ^^^^^^^^^

Hint:
  Define it first: let unwrap_or = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/type_system/typed_let_with_base.flx:55:5
   |
55 |     assert_eq(none_val, 99)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/type_system/typed_let_with_base.flx:59:5
   |
59 |     assert_eq(len(ints), 3)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/type_system/typed_let_with_base.flx:60:5
   |
60 |     assert_eq(sum(ints), 6)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/type_system/typed_let_with_base.flx:64:31
   |
64 |     let lengths: Array<Int> = map(words, /w -> len(w))
   |                               ^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/type_system/typed_let_with_base.flx:65:27
   |
65 |     let long_count: Int = fold(lengths, 0, /(acc, l) -> if l > 3 { acc + 1 } else { acc })
   |                           ^^^^

Hint:
  Define it first: let fold = ...;

Help:
  Did you mean `found`?


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/type_system/typed_let_with_base.flx:66:5
   |
66 |     assert_eq(long_count, 3)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;

Found 30 errors.
== stdout ==
<not executed>
